--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-scroll-to-top": "^3.0.0",
     "react-vertical-timeline-component": "^3.5.3",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
